// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotionalInput default 1`] = `
<div
  className="sc-htpNat idZgat"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb fauXdE"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput default 2`] = `
<div
  className="sc-htpNat idZgat"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb dfDCvR"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput disabled 1`] = `
<div
  className="sc-htpNat idZgat"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb ixCVbX"
    data-qa="notional-input__input-eurusd"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput disabled 2`] = `
<div
  className="sc-htpNat idZgat"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb jPqRyz"
    data-qa="notional-input__input-eurusd"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
</div>
`;

exports[`NotionalInput show reset button 1`] = `
<div
  className="sc-htpNat idZgat"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb fauXdE"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <button
    className="sc-ifAKCX gROrJN"
    data-qa="notional-input__reset-input-value"
    onClick={[Function]}
  >
    <i
      className="fas fa-redo fa-flip-horizontal"
    />
  </button>
</div>
`;

exports[`NotionalInput show reset button 2`] = `
<div
  className="sc-htpNat idZgat"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb dfDCvR"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <button
    className="sc-ifAKCX fCQbjt"
    data-qa="notional-input__reset-input-value"
    onClick={[Function]}
  >
    <i
      className="fas fa-redo fa-flip-horizontal"
    />
  </button>
</div>
`;

exports[`NotionalInput with error 1`] = `
<div
  className="sc-htpNat kjfMBr"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb iHOuZf"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="sc-bwzfXH hUHSeX"
    data-qa="notional-input__validation-message"
  >
    Some error
  </div>
</div>
`;

exports[`NotionalInput with error 2`] = `
<div
  className="sc-htpNat kjfMBr"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb iHOuZf"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="sc-bwzfXH hUHSeX"
    data-qa="notional-input__validation-message"
  >
    Some error
  </div>
</div>
`;

exports[`NotionalInput with info 1`] = `
<div
  className="sc-htpNat kjfMBr"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb gDYEmO"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="sc-bwzfXH cHoFLD"
    data-qa="notional-input__validation-message"
  >
    Some information
  </div>
</div>
`;

exports[`NotionalInput with info 2`] = `
<div
  className="sc-htpNat kjfMBr"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb gDYEmO"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="sc-bwzfXH cHoFLD"
    data-qa="notional-input__validation-message"
  >
    Some information
  </div>
</div>
`;

exports[`NotionalInput with warning 1`] = `
<div
  className="sc-htpNat kjfMBr"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb ecOaYV"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="sc-bwzfXH bpWJsW"
    data-qa="notional-input__validation-message"
  >
    Some warning
  </div>
</div>
`;

exports[`NotionalInput with warning 2`] = `
<div
  className="sc-htpNat kjfMBr"
>
  <span
    className="sc-bdVaJa bxrsSL"
    data-qa="notional-input__currency-pair-symbol"
  >
    EUR
  </span>
  <input
    className="sc-bxivhb ecOaYV"
    data-qa="notional-input__input-eurusd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    type="text"
    value="1,000,000"
  />
  <div
    className="sc-bwzfXH bpWJsW"
    data-qa="notional-input__validation-message"
  >
    Some warning
  </div>
</div>
`;
